# kimspeak

./: .gitignore  README.md  channel.json  go.mod  go.sum  guild.json  kimspeak-deploy-source.tgz  kimspeak-server-update.tgz  login.json  message.json  register.json  voice-token.json
.github/workflows/: build-windows.yml
.pnpm-store/v11/: index.db-shm  index.db-wal
cmd/api/: main.go
internal/auth/: context.go  handler.go  middleware.go  token.go
internal/channels/: handler.go  model.go  repository.go
internal/config/: config.go
internal/db/: postgres.go
internal/db/migrations/: 000001_create_users_table.up.sql  000002_create_guilds_tables.down.sql  000002_create_guilds_tables.up.sql  000003_create_channels_table.up.sql  (+9 more)
internal/friends/: handler.go  model.go  repository.go
internal/guildmembers/: repository.go
internal/guilds/: handler.go  model.go  repository.go
internal/health/: handler.go
internal/httpserver/: cors.go  cors_test.go  router.go  server.go
internal/invitations/: handler.go  repository.go
internal/logger/: logger.go
internal/messages/: handler.go  model.go  repository.go
internal/users/: model.go  repository.go
internal/voice/: handler.go  handler_test.go  message.go  safe_ws.go  sfu.go  sfu_test.go
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/: voice-test.html
web/src/: App.css  App.tsx  api.ts
web/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  native_screen_share.rs  screen_audio.rs
(+9 files in other folders)
