[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
windows-capture = "2.0.0"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

livekit = { git = "https://github.com/livekit/rust-sdks", tag = "livekit/v0.7.50", package = "livekit" }
